# neuralware-x

./: .clang-format  .clang-tidy  .editorconfig  .gcovr.cfg  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  .scorecard.yml  .spectral.yaml  3RD-PARTY-LICENSES.md  ACCESSIBILITY.md  CHANGELOG.md  CHECKSUMS.sha256  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO  Dockerfile  Dockerfile.distroless  Doxyfile  ETHICS.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MODEL_CARD.json  Makefile  NOTICE  OSSMETADATA  PRIVACY.md  README.md  RELEASE.md  REUSE.toml  SECURITY.md  SECURITY_CONTACTS  SUPPORT.md  (+8 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/.well-known/: security.txt
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  bug_report.yml  config.yml  feature.md  feature_request.md  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: backport.yml  bandit.yml  binary-artifacts.yml  changelog-gate.yml  checkov.yml  ci-build-ccache.yml  ci-build.yml  ci-quality.yml  clang-format.yml  codeql.yml  container-structure-test.yml  coverage-gate.yml  coverage.yml  cppcheck.yml  dependabot-automerge.yml  dockle.yml  docs-publish.yml  docs.yml  format-check.yml  gitleaks.yml  labels.yml  lint.yml  macos.yml  markdownlint.yml  pgo.yml  release-drafter.yml  release-signed.yml  release.yml  reuse.yml  sanitizers.yml  sbom-diff.yml  sbom.yml  secret-scan.yml  security-scans.yml  shell-lint.yml  slsa-source.yml  slsa.yml  stale.yml  trufflehog.yml
.github/workflows.disabled/: actionlint.yml  bench-regression.yml  benchmarks.yml  binary-artifacts.yml  changelog.yml  checksec.yml  ci.yml  clang-tidy.yml  cmake-lint.yml  commitlint.yml  container.yml  coverage-gate.yml  coverage-html.yml  dco.yml  docs.yml  doxygen.yml  format-check.yml  fuzz.yml  green-core.yml  hadolint.yml  k6.yml  kind-e2e.yml  license-scan.yml  lychee.yml  openapi.yml  osv-scanner.yml  pages.yml  pypi-publish.yml  release-please.yml  release-signed.yml  scan-build.yml  scorecard.yml  security-scan.yml  security-scans.yml  semantic-pr.yml  semgrep.yml  size-label.yml  size-threshold.yml  slsa-provenance.yml  slsa-source.yml  (+5 more)
.reuse/: dep5
.well-known/: security.txt
api/: postman_collection.json
benchmarks/: CMakeLists.txt  basic_bench.cpp
bindings/python/: CMakeLists.txt  module.cpp
bom/: sbom.spdx.json
charts/: README-HARDENING.md
ci/: container-structure-test.yaml
cmake/: NEURALWAREXConfig.cmake.in  nwx.pc.in
cmake/toolchains/: Hardening.cmake  ccache.cmake  clang.cmake  clang_pgo_gen.cmake  clang_pgo_use.cmake  gcc.cmake  musl.cmake
deploy/kyverno/: verify-images.yaml
deploy/security/: seccomp-nwx.json
deploy/selinux/: nwx.te
deploy/systemd/: nwx.service
docker/: Dockerfile.build  Dockerfile.runtime
docs/: ACCESSIBILITY.md  ADMISSION_POLICIES.md  ADOPTION.md  API.md  API_STABILITY.md  ARCHITECTURE.md  AUDIT-CHECKLIST.md  AUDIT_REPORT.md  AUDIT_TRAIL.md  AVX2.md  BACKUP_AND_DR.md  BATCHING.md  BENCHMARKING.md  BENCHMARKS.md  BRANCH_PROTECTION.md  BRANDING.md  BRAND_GUIDE.md  BUG_BOUNTY.md  BUILDINFO.md  BUILD_TIPS.md  CALIBRATION.md  CCACHE.md  CII_BEST_PRACTICES.md  CI_TOGGLES.md  CLA_POLICY.md  CODING_STYLE.md  COMPATIBILITY_MATRIX.md  COMPILER_SUPPORT.md  COMPLETIONS.md  COMPLIANCE.md  CONTAINER_SIGNING.md  CONTRIBUTOR_LADDER.md  CPU_FEATURES.md  CROSS_VALIDATION.md  DATASETS.md  DATA_RETENTION.md  DEPENDENCIES.md  DEPRECATION_POLICY.md  DETERMINISTIC_BUILDS.md  DRIFT.md  (+80 more)
docs/architecture/: adr-0001-minimal-mlp.md
docs/doxygen/: Doxyfile
docs/man/: nwx.1
docs/sphinx/: conf.py  index.rst  requirements.txt
examples/: config.json
examples/clients/: cpp_client.cpp  python_client.py
fuzz/: csv_fuzz.cpp  json_fuzz.cpp
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
include/nwx/: activation.hpp  bundle.hpp  capi.h  cpu_features.hpp  csv.hpp  json.hpp  logging.hpp  metrics.hpp  metrics_ex.hpp  model.hpp  optim.hpp  quant.hpp  quant_runtime.hpp  scaler.hpp  serialize.hpp  split.hpp  stratified.hpp  tensor.hpp  trainer.hpp  version.hpp
k8s/: deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  servicemonitor.yaml
openapi/: openapi.yaml
packaging/brew/: neuralwarex.rb
packaging/chocolatey/: neuralware-x.nuspec
packaging/debian/: changelog  control
packaging/homebrew/: neuralware-x.rb
packaging/nix/: flake.nix
packaging/pkgconfig/: neuralwarex.pc.in
packaging/rpm/: neuralware-x.spec
packaging/scoop/: neuralware-x.json
packaging/snap/: snapcraft.yaml
packaging/systemd/: nwx_serve.service
proto/: nwx.proto
python/: README.md  pyproject.toml
python/src/neuralwarex/: __init__.py  binding.py
scripts/: bolt_optimize.sh  build.sh  e2e_smoke.sh  format.sh  gen_checksums.sh  install.sh  lint_all.sh  pgo_build.sh  sbom.sh  sbom_diff.sh  test.sh  verify-all.sh  verify_release.sh
seccomp/: nwx-serve.json
src/: CMakeLists.txt
src/app/: bench.cpp  check.cpp  confusion.cpp  cv.cpp  drift.cpp  encrypt.cpp  eval.cpp  explain.cpp  fairness.cpp  importance.cpp  impute.cpp  main.cpp  prof.cpp  report.cpp  serve.cpp
src/capi/: capi.cpp
src/core/: activation.cpp  cpu_features.cpp  dataset_bridge.cpp  json.cpp  logging.cpp  metrics.cpp  metrics_ex.cpp  model.cpp  optim.cpp  quant.cpp  scaler.cpp  split.cpp  stratified.cpp  tensor.cpp  trainer.cpp  version.cpp
src/fuzz/: csv_fuzz.cpp
src/gpu/: cuda_backend.cu
src/grpc/: serve_grpc.cpp
src/io/: bundle.cpp  csv.cpp  dataset.cpp  serialize.cpp
tests/: CMakeLists.txt  minitest.hpp  test_determinism.cpp  test_metrics_ex.cpp  test_xor.cpp
tools/: bench_regression.py  changelog_gate.sh  checksec.sh  coverage.sh  k6_predict.js  lint.sh  pgo_build.sh  release_source_tarball.sh  sbom_diff.py  size_threshold.py  trojansource_scan.py  verify.sh  verify_image_signature.sh
vex/: README.md  example.vex.json
(+8 files in other folders)
