# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11", "cmake>=3.22", "ninja", "packaging"]
build-backend = "scikit_build_core.build"

[project]
name = "neuralwarex"
version = "2.0.0"
description = "Production-grade, verifiable neural networks in C++ (NEURALWARE-X)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name="NEURALWARE-X Maintainers", email="maintainers@neuralwarex.org"}]
license = { text = "Apache-2.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[tool.scikit-build]
cmake.verbose = false
cmake.minimum-version = "3.22"
wheel.expand-macos-universal-tags = true
cmake.define = { CMAKE_BUILD_TYPE="Release" }

[project.urls]
Homepage = "https://example.org/neuralwarex"
