# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "neuralwarex"
version = "10.0.0"
description = "NEURALWARE-X Python bindings (ctypes)"
authors = [{name="NEURALWARE-X Maintainers"}]
license = {text="Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy>=1.22"]
